# agndiag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
agndiag/: lineclass.py  mpa_jhu.py
tests/: test_agndiag.py
