[tool.poetry]
name = "agndiag"
version = "0.1.0"
description = ""
authors = ["Jose Sabater <jsm@jsabater.info>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
